tdf#141708 wait until float is activated to grab focus

otherwise the grab occurs in the navigator ctor which happens during
impress startup and will generate focus events which leads to impress
getting activated during its startup triggering the creation of the
navigator which is already being created resulting in multiple
navigators created during startup

Change-Id: Ic0a868437845fda9edf9eb0d761227d4c27992d5